Fix and polish tests.